--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 							<section class="panel color4-alt">
 								<div class="intro color4">
 									<h2 class="major">Contact</h2>
-									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
+									<p>Las discotecas son el lugar perfecto para bailar, disfrutar con amigos, escuchar buena música y vivir noches llenas de energía y diversión.</p>
 								</div>
 								<div class="inner columns divided">
 									<div class="span-3-25">
